Add custom taxonomies

--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -6,6 +6,16 @@
     <title>Ut &amp; Spring</title>
 </head>
 <body>
-    {{ content | safe }}
+    <header id="masthead" class="site-header">
+        <h1>Ut &amp; Spring</h1>
+    </header>
+
+    <main class="page-content">
+        {{ content | safe }}
+    </main>
+
+    <footer class="site-footer">
+        <p>Kåpyrajt osv</p>
+    </footer>
 </body>
 </html>
