--- a/content/by-distance.njk
+++ b/content/by-distance.njk
@@ -1,4 +1,5 @@
 ---
+title: Alla {{ distance.title }} lopp
 pagination:
   data: collections.eventDistances
   size: 1
@@ -9,7 +10,7 @@ layout: "layouts/default.njk"
 
 <h1>Alla {{ distance.title }} lopp</h1>
 
-{% set posts = collections.events | include('data.distances', distance.title) %} 
+{% set posts = collections.events | include('data.distances', distance.title) %}
 <ul>
   {% for post in posts %}
   <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
