--- a/content/by-city.njk
+++ b/content/by-city.njk
@@ -11,7 +11,7 @@ eleventyComputed:
 
 <h1>Alla lopp i {{ city.title }}</h1>
 
-{% set posts = collections.events | include('data.cities', distance.title) %} 
+{% set posts = collections.events | include('data.cities', city.title) %} 
 <ul>
   {% for post in posts %}
   <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
